crates/quench-runtime/tests/spec_fixtures/errors/range_error.js
// spec: ECMA-262 sec-number-constructor
// expect: error: RangeError
// tags: errors, range

const arr = new Array(-1);
